--- a/res/layout/activity_draw.xml
+++ b/res/layout/activity_draw.xml
@@ -3,16 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <ImageButton
+        android:id="@+id/palette_red"
+        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/palette_color"
+        android:contentDescription="@string/red" />
+        
     <com.kchodorow.gamegame.drawing.DrawView
 	    android:id="@+id/draw_view"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:layout_alignParentTop="true"
+	    android:layout_below="@id/palette_red"
 	    android:layout_centerHorizontal="true" />
     
 	<Button 
 	    android:id="@+id/drawing_editor_save"
-	    android:text="Save"
+	    android:text="@string/save"
 	    android:onClick="saveHandler"
 	  	android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
